<resources>
    <string name="app_name">MyTarot</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="arc_pos1">Первый архетип - характер человека, то как он проявляется.</string>
    <string name="arc_pos2">Второй архетип - земная задача или задача личности</string>
    <string name="arc_pos3">Третий архетип принято считать архетипом зрелости, и он обычно проявляется ближе к 30 годам. Если же до 45 лет он не проявился, он принимает негативное свое значение</string>
    <string name="arc_pos4">Четвертый архетип - выдающееся качество личности, то, что выделяет человека. Его уникальность</string>
    <string name="arc_pos5">Пятый архетип - кармическая отработка личности, причинно-следственные связи</string>
    <string name="arc_pos6">Шестой архетип - негатив личности, неосознанные страхи и затыки</string>
    <string name="arc_pos7">Седьмой архетип - помощник. Он часто может совсем не проявляться, но тогда жизнь будет казаться болью. Часто через него идут деньги. Это то, что необходимо развивать в себе, чтобы жить полноценно</string>
    <string name="arc_pos8">Восьмой архетип показывает призму, через которую человек видит этот мир, его фильтры восприятия</string>
    <string name="arc_pos9">Девятый архетип это миссия души. То, чему должна научиться наша душа в этом воплощении</string>
    <string name="enter_birthdate">Введите дату рождения:</string>
    <string name="date_hint">дд.мм.гггг</string>
    <string name="button_calculate">Рассчитать</string>
    <string name="russian_tarot">Русское Таро Санкт-Петербурга</string>
    <string name="waite_tarot">Классическое Таро Райдера-Уэйта</string>
    <string name="medieval_tarot">Средневековое Таро Кошек</string>
    <string name="general_description">Общее описание</string>
    <string name="minor_arc">Младшие арканы</string>
    <string name="swords">Масть мечей</string>
    <string name="wands">Масть жезлов</string>
    <string name="cups">Масть кубков</string>
    <string name="pentacles">Масть пентаклей</string>
    <string name="ru_tarot_desc">русское таро СП</string>
    <string name="waite_tarot_desc">таро уэйта</string>
    <string name="medieval_tarot_desc">таро кошек</string>
    <string name="deal_img">Изображение расклада</string>
    <string name="High_arcs">Старшие арканы</string>
    <string name="card_img">Изображение карты</string>
    <string name="star_img">звездочка</string>
    <string name="arrow_expand">стрелка</string>
</resources>