<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:paddingTop="16dp"

        tools:context=".presentation.fragments.CardItemFragment">

        <TextView
            android:id="@+id/tv_card_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_thin"
            android:shadowColor="@color/black"
            android:shadowDy="4"
            android:shadowRadius="0.2"

            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@id/cv_card_images"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_card_images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toTopOf="@id/tv_meaning_name_reg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_card_item_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_images_bg"
                android:paddingBottom="24dp">

                <ImageView
                    android:id="@+id/iv_card_img1"
                    android:layout_width="78dp"
                    android:layout_height="132dp"
                    android:layout_marginHorizontal="0dp"
                    android:layout_marginTop="16dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/ru_tarot_desc"
                    android:scaleType="fitCenter"
                    android:src="@drawable/card_img_temp"
                    app:layout_constraintBottom_toTopOf="@+id/tv_title_img_card1"
                    app:layout_constraintEnd_toStartOf="@id/iv_card_img2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_title_img_card1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:maxWidth="110dp"
                    android:shadowColor="@color/black"
                    android:shadowDy="4"
                    android:shadowRadius="0.2"
                    android:text="@string/russian_tarot"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tv_title_img_card2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_card_img1" />

                <ImageView
                    android:id="@+id/iv_card_img2"
                    android:layout_width="78dp"
                    android:layout_height="132dp"
                    android:layout_marginHorizontal="0dp"
                    android:layout_marginTop="16dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/waite_tarot_desc"
                    android:scaleType="fitCenter"
                    android:src="@drawable/card_img_temp"
                    app:layout_constraintBottom_toTopOf="@+id/tv_title_img_card2"
                    app:layout_constraintEnd_toStartOf="@id/iv_card_img3"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@id/iv_card_img1"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_title_img_card2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:maxWidth="110dp"
                    android:shadowColor="@color/black"
                    android:shadowDy="4"
                    android:shadowRadius="0.2"
                    android:text="@string/waite_tarot"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tv_title_img_card3"
                    app:layout_constraintStart_toEndOf="@id/tv_title_img_card1"
                    app:layout_constraintTop_toBottomOf="@id/iv_card_img2" />

                <ImageView
                    android:id="@+id/iv_card_img3"
                    android:layout_width="78dp"
                    android:layout_height="132dp"
                    android:layout_marginHorizontal="0dp"
                    android:layout_marginTop="16dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/medieval_tarot_desc"
                    android:scaleType="fitCenter"
                    android:src="@drawable/card_img_temp"
                    app:layout_constraintBottom_toTopOf="@+id/tv_title_img_card3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@id/iv_card_img2"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_title_img_card3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:maxWidth="110dp"
                    android:shadowColor="@color/black"
                    android:shadowDy="4"
                    android:shadowRadius="0.2"
                    android:text="@string/medieval_tarot"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_title_img_card2"
                    app:layout_constraintTop_toBottomOf="@id/iv_card_img3" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_meaning_name_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:paddingHorizontal="8dp"
            android:shadowColor="@color/black"
            android:shadowDy="4"
            android:shadowRadius="0.1"
            android:text="@string/general_description"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:layout_marginStart="12dp"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/tv_meaning_desc_reg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_card_images" />

        <TextView
            android:id="@+id/tv_meaning_desc_reg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_regular"
            android:paddingHorizontal="16dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/separator_meaning"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_meaning_name_reg" />

        <View
            android:id="@+id/separator_meaning"
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_marginStart="16dp"

            android:layout_marginEnd="16dp"
            android:background="#80FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/rv_meaning_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_meaning_desc_reg" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_meaning_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="110dp"
            android:background="@android:color/transparent"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator_meaning"
            tools:listitem="@layout/item_meaning" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>